Subindo pasta dev-front end

--- a/dev_frontend/index.html
+++ b/dev_frontend/index.html
@@ -16,7 +16,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="index.css" />
 
     <title>JobDelas</title>
   </head>
@@ -69,21 +69,17 @@
       </section>
 
       <section class="container_postagem">
-        <div class="container mt-5 postagem">
+        <div class="container mt-5 criar_postagem">
           <div class="card">
             <div class="card-body">
-              <img
-                src="caminho/para/foto_do_usuario.jpg"
-                alt="User"
-                class="user-photo"
-              />
-              <h3>Compartilhe seus momentos</h3>
+              <img src="iconfoto.png" alt="User" class="user-photo" />
+              <h3>O que você está pensando?</h3>
               <button
                 class="btn btn-primary"
                 data-toggle="modal"
                 data-target="#writePostModal"
               >
-                Compartilhar Momento
+                Postar
               </button>
             </div>
           </div>
