Arquivo html home postagem e modal css

--- a/dev_frontend/index.html
+++ b/dev_frontend/index.html
@@ -111,15 +111,7 @@
                     id="imageUpload"
                   />
                 </div>
-                <div class="form-group">
-                  <label for="locationInput">Adicionar Localização:</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="locationInput"
-                    placeholder="Cidade, País"
-                  />
-                </div>
+
                 <div class="form-group">
                   <label for="tagsInput">Adicionar Tags/Assuntos:</label>
                   <input
@@ -133,14 +125,14 @@
               <div class="modal-footer">
                 <button
                   type="button"
-                  class="btn btn-secondary"
+                  class="botao_criarpostagem cancelar"
                   data-dismiss="modal"
                 >
                   Cancelar
                 </button>
                 <button
                   type="button"
-                  class="btn btn-primary"
+                  class="botao_criarpostagem compartilhar"
                   onclick="submitPost()"
                 >
                   Compartilhar
