--- a/dev_frontend/usuario.html
+++ b/dev_frontend/usuario.html
@@ -1,89 +1,54 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <title>Atualizar Usuário</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../../static/css/style.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-  <title>Atualizar Usuário</title>
-</head>
-
-<body>
-  <button class="botao-perfil" data-toggle="modal" data-target="#myModal" style="border: none; background-color: #fff; width: 55px; cursor: pointer;">
-    <img src="/img/fotoUsuario.png" class="img-perfil" style="border-radius: 20px; width: 50px; border: none;" alt="Imagem no Botão">
-  </button>
-
-  <!-- Modal -->
-  <div class="modal" id="myModal">
-    <div class="modal-dialog">
-      <div class="modal-content">
-
-        <!-- Cabeçalho do Modal -->
-        <div class="modal-header">
-          <h4 class="modal-title">Perfil</h4>
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-        </div>
-
-        <!-- Corpo do Modal -->
-        <div class="modal-body">
-          <form method="PUT" class="formulario" th:object="${usuario}" enctype="multipart/form-data">
-            <div class="form-group">
-              <label for="imageUpload">Anexar Foto de Perfil:</label>
-              <input type="file" class="form-control-file" id="imageUpload" />
-            </div>
-            <div class="form-group">
-              <label for="nome">Nome:</label>
-              <input type="text" class="form-control" id="nome" required />
-            </div>
-
-            <div class="form-group">
-              <label for="email">Email:</label>
-              <input type="text" class="form-control" id="email" required />
-            </div>
-
-            <div class="form-group">
-              <label for="senha">Senha:</label>
-              <input type="password" class="form-control" id="senha" required />
-            </div>
-
-            <div class="form-group">
-              <label for="resumo">Resumo:</label>
-              <textarea class="form-control" id="resumo"></textarea>
-            </div>
-
-            <div class="form-group">
-              <label for="telefone">Telefone:</label>
-              <input type="text" class="form-control" id="telefone" required />
-            </div>
-
-            <div class="form-group">
-              <label for="portfolio">Link para o Portfólio:</label>
-              <input type="text" class="form-control" id="portfolio" />
-            </div>
-          </form>
-        </div>
-
-        <!-- Rodapé do Modal -->
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-          <button type="submit" class="btn btn-primary">Atualizar</button>
-        </div>
-
+  <body>
+    <header class="header">
+      <div class="logo">
+        <img src="jb_company.png" alt="Sua Logo" />
       </div>
-    </div>
-  </div>
+      <nav>
+        <a href="#"><i class="fas fa-building"></i> Cadastrar Empresa</a>
+        <a href="#"><i class="fas fa-list-alt"></i> Listar Empresas</a>
+        <a href="#"><i class="fas fa-search"></i> Buscar Empresa</a>
+        <a href="#"><i class="fas fa-plus-square"></i> Cadastrar Curso</a>
+        <a href="#"><i class="fas fa-search"></i> Buscar Curso</a>
+        <a href="#"><i class="fas fa-eye"></i> Visualizar Cursos</a>
+        <a href="#"><i class="fas fa-users"></i> Visualizar Candidatos</a>
+      </nav>
+    </header>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
-</body>
+    <!-- Importando o JavaScript do Font Awesome -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
 
+    <!-- Importando o JavaScript do Font Awesome -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
+
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
