--- a/front-dev/empresas.html
+++ b/front-dev/empresas.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buscar Empresa</title>
-    <link rel="stylesheet" href="/css/jbcompany-empresas.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
     <section class="cointaner-principal">
       <div class="menu">
         <nav>
-          <a href="/jbcompany/cadastrar/empresas"
+          <a href="/jbcompany/empresas"
             ><i class="fas fa-building"></i> Cadastrar Empresa</a
           >
           <a href="/jbcompany/cadastrar/vagas"
