--- a/front-dev/index.html
+++ b/front-dev/index.html
@@ -3,37 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Buscar Empresa</title>
+    <title>Jb Company</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
     <section class="cointaner-principal">
       <div class="menu">
-        <nav>
-          <a href="/jbcompany/empresas"
-            ><i class="fas fa-building"></i> Cadastrar Empresa</a
-          >
-          <a href="/jbcompany/cadastrar/vagas"
-            ><i class="fas fa-plus-circle"></i> Cadastrar Vagas</a
-          >
-          <a href="/jbcompany/listar/empresas"
-            ><i class="fas fa-list"></i> Listar Empresas
-          </a>
-          <a href="/jbcompany/buscar/empresas"
-            ><i class="fas fa-search"></i> Buscar Empresa</a
-          >
-          <a href="/jbcompany/cadastrar/empresas"
-            ><i class="fas fa-users"></i> Visualizar Candidatos</a
-          >
-        </nav>
         <div class="logo">
           <img src="/img/jb_company.png" alt="Sua Logo" />
         </div>
       </div>
-      <form class="form_corpo" method="get">
-        <h2>Vamos</h2>
-      </form>
+      <section class="cards-escolha-jbcompany">
+        <h1>Escolha uma opção</h1>
+        <div>
+          <button>
+            <i class="fas fa-building"></i>
+            <p>Empresas</p>
+          </button>
+          <button>
+            <i class="fas fa-book"></i>
+            <p>Cursos</p>
+          </button>
+        </div>
+      </section>
     </section>
     <script
       src="https://kit.fontawesome.com/cda1aa7b4f.js"
